# venvs

./: README.md
poetry-venvs/: readme.txt
uv-venvs/bayesian/: README.md  main.py  pyproject.toml
uv-venvs/dashboard/: main.py  pyproject.toml
uv-venvs/finance/: README.md  pyproject.toml
uv-venvs/gpflow_tf/: main.py  pyproject.toml
uv-venvs/langs/: pyproject.toml
uv-venvs/pysparkvenv/: main.py  pyproject.toml
uv-venvs/pytorch/: README.md  pyproject.toml
uv-venvs/sandbox/: pyproject.toml
