[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easydict>=1.13",
    "fireducks>=1.3.0",
    "fredapi>=0.5.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nasdaq-data-link>=1.0.4",
    "pandas-datareader>=0.10.0",
    "polygon-api-client>=1.14.6",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "scipy==1.15.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.4",
    "xarray>=2025.6.1",
    "yfinance>=0.2.63",
]
