[project]
name = "finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "click>=8.2.1",
    "easydict>=1.13",
    "fake-useragent>=2.2.0",
    "fastapi[standard]>=0.116.1",
    "finnhub-python>=2.4.24",
    "fireducks>=1.3.0",
    "flask>=3.1.1",
    "fredapi>=0.5.2",
    "ipykernel>=6.29.5",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "nasdaq-data-link>=1.0.4",
    "polygon-api-client>=1.14.6",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "pyrepl>=0.11.4",
    "python-dotenv>=1.1.1",
    "schwab-py>=1.5.1",
    "schwabdev>=2.5.0",
    "scipy==1.15.3",
    "seaborn>=0.13.2",
    "selenium>=4.34.0",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.4",
    "webdriver-manager>=4.0.2",
    "websocket-client>=1.8.0",
    "websockets>=14.2",
    "xarray>=2025.6.1",
    "yfinance>=0.2.63",
]
