[project]
name = "gpflow-tf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpflow>=1.5.1",
    "graphviz>=0.21",
    "ipykernel>=6.29.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pydot>=4.0.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
