[project]
name = "langs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "duckdb>=1.4.3",
    "google-genai>=1.59.0",
    "langchain>=0.3.27",
    "langchain-cli>=0.0.36",
    "langchain-google-genai>=4.2.0",
    "langchain-google-vertexai>=2.0.28",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.3",
    "langsmith>=0.4.13",
    "mermaid-py>=0.8.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.1.1",
    "streamlit>=1.53.0",
]
