[project]
name = "pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easydict>=1.13",
    "fastapi[standard]>=0.115.12",
    "hydra-colorlog>=1.2.0",
    "hydra-core>=1.3.2",
    "jsonschema>=4.24.0",
    "matplotlib>=3.10.3",
    "omegaconf>=2.3.0",
    "pytest>=8.4.1",
    "pydantic>=2.11.5",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
