[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "easydict>=1.13",
    "hydra-core>=1.3.2",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "omegaconf>=2.3.0",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "xgboost>=3.0.2",
]
