[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "easydict>=1.13",
    "fireducks>=1.4.4",
    "hydra-core>=1.3.2",
    "imbalanced-learn>=0.13.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "jupyter-black>=0.4.0",
    "kagglehub>=0.3.13",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "mlflow>=3.8.1",
    "nbconvert>=7.16.6",
    "omegaconf>=2.3.0",
    "optuna>=4.6.0",
    "pandas>=2.3.0",
    "pydantic[email,timezone]>=2.11.7",
    "pyqt6>=6.10.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "typer>=0.21.1",
    "xgboost>=3.0.2",
]
